@@ -1,6 +1,7 @@
 New in SVN (will be 0.12)
 -------------------------
 
+* Fixed Issue 162 (wrong highlighting using sphinx)
 * Changed default language policy as described in Issue 53
 * Fixed Issue 148 (Images should be looked for relative to source document)
 * Fixed Issue 158 (Some admonitions crashed pdfbuilder)
